// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FormControl Basic 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 250px;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c2 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c2 input *,
.c2 input *::before,
.c2 input *::after {
  box-sizing: border-box;
}

.c2 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c2 input:-webkit-autofill,
  .c2 input:-webkit-autofill:hover,
  .c2 input:-webkit-autofill:focus,
  .c2 input:-webkit-autofill:active,
  .c2 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <input
          aria-disabled={false}
          aria-errormessage={null}
          aria-invalid={false}
          aria-required={true}
          autoComplete="on"
          autoCorrect="off"
          autoFocus={false}
          disabled={false}
          id="form-control-basic-story"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInvalid={[Function]}
          required={true}
          type="email"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Browser Validation 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.6);
  display: block;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c19 *,
.c19 *::before,
.c19 *::after {
  box-sizing: border-box;
}

.c25 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c25 *,
.c25 *::before,
.c25 *::after {
  box-sizing: border-box;
}

.c25::-moz-focus-inner {
  border-style: none;
}

.c28 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c28::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c9 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c9::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c12 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c12::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c20 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c20::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c16 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c16::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c26 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #3F37C9;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c26 *,
.c26 *::before,
.c26 *::after {
  box-sizing: border-box;
}

.c26:hover {
  background-color: hsl(243.29999999999995,57.5%,40.2%);
}

.c26:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c3 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c24 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c24 *,
.c24 *::before,
.c24 *::after {
  box-sizing: border-box;
}

.c24 > * {
  margin-left: 8px;
}

.c24 > :first-child {
  margin-left: 0;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

.c11:first-child {
  padding-top: 32px;
}

.c11:last-child {
  padding-bottom: 32px;
}

.c11:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c6:only-child {
  padding-bottom: 32px;
}

.c7 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c22 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c18 {
  margin-bottom: 8px;
}

.c21 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c21 *,
.c21 *::before,
.c21 *::after {
  box-sizing: border-box;
}

.c21 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c21 select *,
.c21 select *::before,
.c21 select *::after {
  box-sizing: border-box;
}

.c21 select:-ms-expand {
  display: none;
}

.c21 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c23 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c23 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <div
          className="c4"
        />
        <div
          className="c5"
        >
          <form
            onSubmit={[Function]}
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <h2
                  className="c8 c9"
                >
                  <span
                    className="c10"
                  >
                    Using Browser Validation
                  </span>
                </h2>
              </div>
            </div>
            <div
              className="c11"
            >
              <p
                className="c8 c12"
              >
                <span
                  className="c13"
                >
                  You can use FormControl with built-in HTML validation. Just set formNoValidate=false on your form control components. Try submitting the form below.
                </span>
              </p>
              <div
                className="c14"
              />
              <p
                className="c15 c16"
              >
                <span
                  className="c13"
                >
                  Note: Many form components set noValidate=true. Make sure it is also set to false on your form.
                </span>
              </p>
            </div>
            <div
              className="c11"
            >
              <div
                className="c17"
              >
                <div
                  className="c18"
                >
                  <label
                    className="c19 c20"
                    htmlFor="planType"
                    id="planType-label"
                  >
                    <span
                      className="c13"
                    >
                      Plan Type
                    </span>
                  </label>
                </div>
                <div
                  className="c21"
                >
                  <select
                    aria-disabled={false}
                    aria-errormessage={null}
                    aria-invalid={false}
                    aria-labelledby="planType-label"
                    aria-required={true}
                    autoComplete="on"
                    autoFocus={false}
                    defaultValue=""
                    disabled={false}
                    formNoValidate={false}
                    id="planType"
                    multiple={false}
                    name="planType"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onInvalid={[Function]}
                    required={true}
                  >
                    <option
                      value=""
                    >
                      -- select a plan --
                    </option>
                    <option
                      value={1}
                    >
                      Free
                    </option>
                    <option
                      value={2}
                    >
                      Pro ($0.99/month)
                    </option>
                  </select>
                  <svg
                    aria-hidden={true}
                    className="c22 c23"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0 24 0 24 24 0 24"
                      fill="none"
                    />
                    <path
                      d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              className="c24"
            >
              <button
                aria-busy={false}
                className="c25 c26"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                type="submit"
              >
                <div
                  className="c27"
                >
                  <span
                    className="c8 c28"
                  >
                    <span
                      className="c13"
                    >
                      Save Changes
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Caption 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c9 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c9::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c6 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c7 {
  margin-top: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c3 input *,
.c3 input *::before,
.c3 input *::after {
  box-sizing: border-box;
}

.c3 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports selector(:-webkit-autofill) {
  .c3 input:-webkit-autofill,
  .c3 input:-webkit-autofill:hover,
  .c3 input:-webkit-autofill:focus,
  .c3 input:-webkit-autofill:active,
  .c3 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <input
            aria-describedby="form-control-with-caption-caption"
            aria-disabled={false}
            aria-errormessage={null}
            aria-invalid={false}
            aria-required={true}
            autoComplete="new-password"
            autoCorrect="off"
            autoFocus={false}
            disabled={false}
            id="form-control-with-caption"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            required={true}
            type="password"
          />
          <div
            className="c4"
          >
            <button
              aria-label="Show password text"
              className="c5 "
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c6"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="c7"
        >
          <span
            className="c8 c9"
            id="form-control-with-caption-caption"
          >
            <span
              className="c10"
            >
              Your password must contain 1 uppercase letter, 1 number, and 1 special character
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Custom Markup 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  color: #99E8E4;
  background-color: inherit;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border-radius: 4px;
  background-color: #DFF0EF;
  color: rgba(30,117,104,1);
  padding: 8px;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c5 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c5::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c11 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c9 {
  margin-top: 8px;
}

.c3 {
  margin-bottom: 8px;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c8 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c8 input *,
.c8 input *::before,
.c8 input *::after {
  box-sizing: border-box;
}

.c8 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c8 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c8 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c8 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c8:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c8 input:-webkit-autofill,
  .c8 input:-webkit-autofill:hover,
  .c8 input:-webkit-autofill:focus,
  .c8 input:-webkit-autofill:active,
  .c8 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <label
            className="c4 c5"
            htmlFor="firstname"
            id="firstname-label"
          >
            <span
              className="c6"
            >
              <div
                className="c7"
              >
                Name
              </div>
            </span>
          </label>
        </div>
        <div
          className="c8"
        >
          <input
            aria-describedby="firstname-caption"
            aria-disabled={false}
            aria-errormessage={null}
            aria-invalid={false}
            aria-labelledby="firstname-label"
            aria-required={true}
            autoComplete="on"
            autoCorrect="off"
            autoFocus={false}
            disabled={false}
            id="firstname"
            name="firstname"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            required={true}
            type="text"
          />
        </div>
        <div
          className="c9"
        >
          <span
            className="c10 c11"
            id="firstname-caption"
          >
            <span
              className="c6"
            >
              <div
                className="c12"
              >
                Provide your first and last name
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Disabled 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.12);
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  opacity: 0.5;
  width: 100%;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c3 input *,
.c3 input *::before,
.c3 input *::after {
  box-sizing: border-box;
}

.c3 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c3 input:-webkit-autofill,
  .c3 input:-webkit-autofill:hover,
  .c3 input:-webkit-autofill:focus,
  .c3 input:-webkit-autofill:active,
  .c3 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <input
            aria-disabled={true}
            aria-errormessage={null}
            aria-invalid={false}
            aria-required={true}
            autoComplete="on"
            autoCorrect="off"
            autoFocus={false}
            disabled={true}
            id="form-control-with-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            placeholder="Disabled input"
            required={true}
            tabIndex={-1}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Error 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-top: 8px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c13 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c13::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c6 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c9 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1rem;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 12px 8px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAE6E8;
  border-radius: 4px;
  color: rgba(153,29,52,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c10 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-bottom: auto;
  margin-right: 8px;
}

.c11 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3px 0;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: #D63349;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c3 input *,
.c3 input *::before,
.c3 input *::after {
  box-sizing: border-box;
}

.c3 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c3:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #D63349;
  padding: 0 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports selector(:-webkit-autofill) {
  .c3 input:-webkit-autofill,
  .c3 input:-webkit-autofill:hover,
  .c3 input:-webkit-autofill:focus,
  .c3 input:-webkit-autofill:active,
  .c3 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <input
            aria-describedby="form-control-with-error-error"
            aria-disabled={false}
            aria-errormessage="form-control-with-error-error"
            aria-invalid={true}
            aria-required={true}
            autoComplete="new-password"
            autoCorrect="off"
            autoFocus={false}
            disabled={false}
            id="form-control-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            required={true}
            type="password"
          />
          <div
            className="c4"
          >
            <button
              aria-label="Show password text"
              className="c5 "
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c6"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
            role="alert"
          >
            <svg
              aria-hidden={true}
              className="c9 c10"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
            <div
              className="c11"
            >
              <span
                className="c12 c13"
                id="form-control-with-error-error"
              >
                <span
                  className="c14"
                >
                  Your password must contain 1 uppercase letter, 1 number, and 1 special character
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With JS Validation 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c24 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c24 *,
.c24 *::before,
.c24 *::after {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c16 *,
.c16 *::before,
.c16 *::after {
  box-sizing: border-box;
}

.c21 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c21 *,
.c21 *::before,
.c21 *::after {
  box-sizing: border-box;
}

.c21::-moz-focus-inner {
  border-style: none;
}

.c41 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c41::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c9 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c9::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c12 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c12::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c17 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c17::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c35 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  font-weight: 700;
  text-align: initial;
}

.c35::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c25 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c25::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c39 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #3F37C9;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c39 *,
.c39 *::before,
.c39 *::after {
  box-sizing: border-box;
}

.c39:hover {
  background-color: hsl(243.29999999999995,57.5%,40.2%);
}

.c39:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c40 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c3 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c38 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c38 *,
.c38 *::before,
.c38 *::after {
  box-sizing: border-box;
}

.c38 > * {
  margin-left: 8px;
}

.c38 > :first-child {
  margin-left: 0;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

.c11:first-child {
  padding-top: 32px;
}

.c11:last-child {
  padding-bottom: 32px;
}

.c11:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c6:only-child {
  padding-bottom: 32px;
}

.c7 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c22 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c23 {
  margin-top: 8px;
}

.c15 {
  margin-bottom: 8px;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c18 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c18 input *,
.c18 input *::before,
.c18 input *::after {
  box-sizing: border-box;
}

.c18 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c30 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: transparent;
  display: grid;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  grid-template-areas: "input label" "input description";
  grid-template-columns: 18px auto;
  grid-template-rows: 18px auto;
  min-height: 36px;
  position: relative;
}

.c30 *,
.c30 *::before,
.c30 *::after {
  box-sizing: border-box;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  grid-area: input;
  height: 18px;
  position: relative;
  width: 18px;
}

.c32 input[type=radio] {
  cursor: pointer;
  font-size: 1rem;
  grid-area: input;
  height: 18px;
  margin: 0;
  opacity: 0;
  width: 18px;
  z-index: 1;
}

.c32 input[type=radio][disabled] {
  cursor: not-allowed;
}

.c33 {
  background-color: transparent;
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.6);
  border-radius: 100%;
  cursor: pointer;
  height: 18px;
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: calc((100% - 18px) / 2);
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 18px;
}

.c31:hover .c33 {
  border-color: #3F37C9;
}

input[type=radio]:checked + .c33 {
  border-color: #3F37C9;
  border-width: 6px;
}

.c34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: label;
  height: 100%;
  overflow: hidden;
  padding-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

.c36 {
  grid-area: description;
  margin-top: 8px;
  padding-left: 8px;
}

.c28 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c28 *,
.c28 *::before,
.c28 *::after {
  box-sizing: border-box;
}

.c29 {
  padding: 16px;
}

.c37 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.12);
  border-top-color: rgba(0,0,0,0.12);
}

.c26 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c26 *,
.c26 *::before,
.c26 *::after {
  box-sizing: border-box;
}

.c26 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c26 select *,
.c26 select *::before,
.c26 select *::after {
  box-sizing: border-box;
}

.c26 select:-ms-expand {
  display: none;
}

.c26 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c27 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c27 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c19 *,
.c19 *::before,
.c19 *::after {
  box-sizing: border-box;
}

@supports selector(:-webkit-autofill) {
  .c18 input:-webkit-autofill,
  .c18 input:-webkit-autofill:hover,
  .c18 input:-webkit-autofill:focus,
  .c18 input:-webkit-autofill:active,
  .c18 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <div
          className="c4"
        />
        <div
          className="c5"
        >
          <form
            noValidate={true}
            onSubmit={[Function]}
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <h2
                  className="c8 c9"
                >
                  <span
                    className="c10"
                  >
                    Using JavaScript Validation
                  </span>
                </h2>
              </div>
            </div>
            <div
              className="c11"
            >
              <p
                className="c8 c12"
              >
                <span
                  className="c13"
                >
                  In this example, a FormControl is used with various form controls, like Input, Select, and Radio. This example illustrates a realistic use case for FormControl. It uses react-hook-form to manage state and provide error validation.
                </span>
              </p>
            </div>
            <div
              className="c11"
            >
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <label
                    className="c16 c17"
                    htmlFor="email"
                    id="email-label"
                  >
                    <span
                      className="c13"
                    >
                      Email
                    </span>
                  </label>
                </div>
                <div
                  className="c18"
                >
                  <input
                    aria-disabled={false}
                    aria-errormessage={null}
                    aria-invalid={false}
                    aria-labelledby="email-label"
                    aria-required={true}
                    autoComplete="on"
                    autoCorrect="off"
                    autoFocus={false}
                    disabled={false}
                    id="email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInvalid={[Function]}
                    required={true}
                    type="email"
                  />
                </div>
              </div>
              <div
                className="c19"
              />
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <label
                    className="c16 c17"
                    htmlFor="password"
                    id="password-label"
                  >
                    <span
                      className="c13"
                    >
                      Password
                    </span>
                  </label>
                </div>
                <div
                  className="c18"
                >
                  <input
                    aria-describedby="password-caption"
                    aria-disabled={false}
                    aria-errormessage={null}
                    aria-invalid={false}
                    aria-labelledby="password-label"
                    aria-required={true}
                    autoComplete="new-password"
                    autoCorrect="off"
                    autoFocus={false}
                    disabled={false}
                    id="password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInvalid={[Function]}
                    required={true}
                    type="password"
                  />
                  <div
                    className="c20"
                  >
                    <button
                      aria-label="Show password text"
                      className="c21 "
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        className="c22"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  className="c23"
                >
                  <span
                    className="c24 c25"
                    id="password-caption"
                  >
                    <span
                      className="c13"
                    >
                      Choose a password with 1 number and 8 or more characters
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="c19"
              />
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <label
                    className="c16 c17"
                    htmlFor="country"
                    id="country-label"
                  >
                    <span
                      className="c13"
                    >
                      Country
                    </span>
                  </label>
                </div>
                <div
                  className="c26"
                >
                  <select
                    aria-disabled={false}
                    aria-errormessage={null}
                    aria-invalid={false}
                    aria-labelledby="country-label"
                    aria-required={true}
                    autoComplete="on"
                    autoFocus={false}
                    defaultValue="us"
                    disabled={false}
                    formNoValidate={true}
                    id="country"
                    multiple={false}
                    name="country"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onInvalid={[Function]}
                    required={true}
                  >
                    <option
                      value="ca"
                    >
                      Canada
                    </option>
                    <option
                      value="mx"
                    >
                      Mexico
                    </option>
                    <option
                      value="us"
                    >
                      United States
                    </option>
                  </select>
                  <svg
                    aria-hidden={true}
                    className="c22 c27"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0 24 0 24 24 0 24"
                      fill="none"
                    />
                    <path
                      d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="c19"
              />
              <div
                className="c14"
              >
                <div
                  className="c15"
                >
                  <label
                    className="c16 c17"
                    htmlFor="planType"
                    id="planType-label"
                  >
                    <span
                      className="c13"
                    >
                      Choose a Plan
                    </span>
                  </label>
                </div>
                <div
                  aria-disabled={false}
                  aria-errormessage={null}
                  aria-invalid={false}
                  aria-labelledby="planType-label"
                  aria-required={true}
                  className="c28"
                  id="planType"
                  role="radiogroup"
                >
                  <div
                    className="c29"
                  >
                    <div
                      className="c30"
                      onInput={[Function]}
                    >
                      <div
                        className="c31 c32"
                      >
                        <input
                          aria-describedby="free-description"
                          aria-disabled={false}
                          aria-invalid={false}
                          aria-labelledby="free-label"
                          aria-required={true}
                          autoComplete="on"
                          autoFocus={false}
                          defaultChecked={true}
                          disabled={false}
                          id="free"
                          name="planType"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInvalid={[Function]}
                          required={true}
                          role="radio"
                          type="radio"
                          value={0}
                        />
                        <span
                          aria-hidden="true"
                          className="c33"
                        />
                      </div>
                      <label
                        className="c34"
                        htmlFor="free"
                        id="free-label"
                      >
                        <span
                          className="c8 c35"
                        >
                          <span
                            className="c10"
                          >
                            Free
                          </span>
                        </span>
                      </label>
                      <div
                        className="c16 c25 c36"
                        id="free-description"
                      >
                        <span
                          className="c13"
                        >
                          Use an ad-supported version of the ACME app
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c37"
                  >
                    <div
                      className="c30"
                      onInput={[Function]}
                    >
                      <div
                        className="c31 c32"
                      >
                        <input
                          aria-describedby="paid-description"
                          aria-disabled={false}
                          aria-invalid={false}
                          aria-labelledby="paid-label"
                          aria-required={true}
                          autoComplete="on"
                          autoFocus={false}
                          defaultChecked={false}
                          disabled={false}
                          id="paid"
                          name="planType"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInvalid={[Function]}
                          required={true}
                          role="radio"
                          type="radio"
                          value={1}
                        />
                        <span
                          aria-hidden="true"
                          className="c33"
                        />
                      </div>
                      <label
                        className="c34"
                        htmlFor="paid"
                        id="paid-label"
                      >
                        <span
                          className="c8 c35"
                        >
                          <span
                            className="c10"
                          >
                            Paid ($0.99/month)
                          </span>
                        </span>
                      </label>
                      <div
                        className="c16 c25 c36"
                        id="paid-description"
                      >
                        <span
                          className="c13"
                        >
                          Skip the ads, get special discounts, and more
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c38"
            >
              <button
                aria-busy={false}
                className="c21 c39"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                type="submit"
              >
                <div
                  className="c40"
                >
                  <span
                    className="c8 c41"
                  >
                    <span
                      className="c13"
                    >
                      Save Changes
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/FormControl With Label 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c5 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c5::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 8px;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c7 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c7 input *,
.c7 input *::before,
.c7 input *::after {
  box-sizing: border-box;
}

.c7 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #3F37C9;
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c7 input:-webkit-autofill,
  .c7 input:-webkit-autofill:hover,
  .c7 input:-webkit-autofill:focus,
  .c7 input:-webkit-autofill:active,
  .c7 input:-webkit-autofill::first-line {
    font-family: "Inter",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <label
            className="c4 c5"
            htmlFor="form-control-with-label-story"
            id="form-control-with-label-story-label"
          >
            <span
              className="c6"
            >
              Email
            </span>
          </label>
        </div>
        <div
          className="c7"
        >
          <input
            aria-disabled={false}
            aria-errormessage={null}
            aria-invalid={false}
            aria-labelledby="form-control-with-label-story-label"
            aria-required={true}
            autoComplete="on"
            autoCorrect="off"
            autoFocus={false}
            disabled={false}
            id="form-control-with-label-story"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            required={true}
            type="email"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
